# CodefyUI

./: .gitignore  COMMERCIAL-LICENSE.md  README.md  README_zh-TW.md  THIRD_PARTY_NOTICES.md  install.ps1  install.sh
.github/: RELEASING.md
.github/workflows/: backend-test.yml  docs-deploy.yml  frontend-build.yml  install-check.yml  release-build.yml
_drafts/I1/I1-1/: complete.json  starter.json
_drafts/I1/I1-2/: complete.json  starter.json
_drafts/I1/I1-3/: complete.json  starter.json
backend/: pyproject.toml  run_graph.py
backend/app/: config.py  main.py
backend/app/api/: routes_apps.py  routes_custom_nodes.py  routes_examples.py  routes_execution_outputs.py  routes_execution_state.py  routes_graph.py  routes_graph_run.py  routes_keys.py  routes_llm.py  routes_nodes.py  routes_plugin_frontend.py  routes_plugins.py  routes_presets.py  routes_system.py  ws_execution.py
backend/app/core/: api_contract.py  api_keys.py  asset_cache.py  auth.py  backward_pass.py  cache.py  codegen.py  db.py  device_utils.py  dotenv.py  execution_context.py  graph_engine.py  migrations.py  node_base.py  node_registry.py  node_state_store.py  plugin_loader.py  plugin_validator.py  project.py  runtime.py  secret_params.py  stateful_module.py  step_trace.py
backend/app/core/llm_proxy/: __init__.py  _common.py  anthropic.py  codex.py  codex_auth.py  codex_models.py  events.py  openai_like.py  schema.py
backend/app/nodes/classical/: __init__.py  accuracy_node.py  decision_tree_classifier_node.py  edu_knn_node.py  edu_linear_regression_node.py  edu_logistic_regression_node.py  knn_node.py  linear_regression_node.py  logistic_regression_node.py  mlp_classifier_node.py  random_forest_classifier_node.py  svm_classifier_node.py
backend/app/nodes/cnn/: batchnorm_node.py  conv1d_node.py  conv2d_explicit_node.py  conv2d_kernel_node.py  conv2d_node.py  conv_transpose2d_node.py  edu_sliding_window_2d_node.py
backend/app/nodes/data/: column_selector_node.py  csv_reader_node.py  dataset_batch_node.py  dataset_node.py  edu_filter_rows_node.py  huggingface_dataset_node.py  normalize_node.py  row_selector_node.py  synthetic_dataset_node.py  synthetic_segmentation_node.py  synthetic_shapes_node.py  tensor_input_node.py  text_input_node.py  train_test_split_node.py
backend/app/nodes/diffusion/: __init__.py  _resblock_module.py  ddpm_sampler_node.py  diffusion_unet_node.py  edu_cross_attention_node.py  edu_resblock_node.py  gaussian_noise_node.py  lerp_node.py  timestep_embedding_node.py  upsample_node.py
backend/app/nodes/io/: checkpoint_node.py  file_reader_node.py  graph_input_node.py  graph_output_node.py  inference_node.py  model_loader_node.py
backend/app/nodes/llm/: __init__.py  _demo_vectors.py  attention_heatmap_node.py  attention_mask_node.py  cosine_similarity_node.py  edu_ffn_node.py  edu_multi_head_attention_node.py  edu_self_attention_node.py  edu_sentence_embedding_node.py  edu_token_embedding_node.py  embedding_scatter_node.py  llm_chat_node.py  positional_encoding_node.py  tokenizer_node.py  word_vector_node.py
backend/app/nodes/normalization/: batchnorm1d_node.py  groupnorm_node.py  instancenorm2d_node.py  layernorm_node.py
backend/app/nodes/rl/: dqn_node.py  kl_divergence_node.py  ppo_node.py  reward_model_node.py
backend/app/nodes/rnn/: gru_node.py  lstm_node.py  rnn_cell_node.py
backend/app/nodes/tensor_ops/: argmax_node.py  scalar_multiply_node.py  softmax_node.py  split_node.py  tensor_create_node.py
backend/app/nodes/training/: backward_once_node.py  diffusion_training_loop_node.py  evaluate_model_node.py  optimizer_node.py  training_loop_node.py
backend/app/nodes/transformer/: attention_node.py  decoder_node.py  encoder_node.py  moe_layer_node.py
backend/app/nodes/utility/: decision_boundary_node.py  embedding_node.py  linear_node.py  scatter_plot_2d_node.py  visualize_node.py
backend/app/schemas/: __init__.py  models.py
backend/data/samples/: grades.csv
backend/tests/: conftest.py  test_accuracy_node.py  test_activation_node.py  test_adaptive_avgpool2d_node.py  test_add_node.py  test_api_apps_invoke.py  test_api_apps_manage.py  test_api_apps_openapi.py  test_api_contract.py  test_api_graph.py  test_api_graph_run.py  test_api_keys.py  test_api_presets.py  test_attention_heatmap_node.py  test_attention_mask_node.py  test_attention_node.py  test_auth_drift.py  test_avgpool2d_node.py  test_backward_once_node.py  test_backward_pass.py  test_batchnorm1d_node.py  test_batchnorm_node.py  test_cache.py  test_chapter_examples.py  test_chapter_packs_api.py  test_checkpoint_node.py  test_codegen.py  test_column_selector_node.py  test_concat_node.py  test_config_project.py  test_config_stage2.py  test_conv1d_node.py  test_conv2d_explicit_node.py  test_conv2d_kernel_node.py  test_conv2d_node.py  test_conv_transpose2d_node.py  test_cosine_similarity_node.py  test_csv_reader_node.py  test_dataloader_node.py  test_dataset_extension.py  (+153 more)
docs/: README.md  README_zh-TW.md  SETUP.md  SETUP_zh-TW.md  docusaurus.config.ts  edu-nodes.md  mlx-spike.md  package.json  pnpm-lock.yaml  sidebars.ts
docs/docs/: intro.md
docs/docs/advanced/: _category_.json  api-reference.md  architecture.md  custom-nodes.md  device-backends.md  graph-copilot.md  plugin-frontend-extensions.md  plugins.md  presets.md
docs/docs/getting-started/: _category_.json  cli-commands.md  (+3 more)
docs/specs/: 2026-05-30-edu-plugins-by-direction-design.md
docs/static/: CNAME
frontend/: package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
plans/: analysis-report.md  export-architecture-diagram.md
plugins/: registry.json
plugins/c1/: cdui.plugin.toml
plugins/c2/: cdui.plugin.toml
plugins/c3/: cdui.plugin.toml
plugins/c4/: cdui.plugin.toml
plugins/c5/: cdui.plugin.toml
plugins/c6/: cdui.plugin.toml
plugins/deep/: cdui.plugin.toml
plugins/edu/: cdui.plugin.toml
plugins/foundations/: cdui.plugin.toml
plugins/rl/: cdui.plugin.toml
scripts/: dev.py  device_smoke.py  mlx_spike.py  plugins.py  project.py  sync_plugin_sdk.py
(+375 files in other folders)
