[project]
name = "codefyui-backend"
version = "0.1.0"
description = "Visual Node-Based ML Pipeline Builder - Backend"
requires-python = ">=3.10"
# PEP 639 SPDX license expression (bare string). The previous PEP 621
# table form `{ text = "..." }` is rejected by setuptools >= 77 with
# "configuration error: project.license must be string". The companion
# `license-files` key is intentionally omitted because PEP 639 disallows
# `..` paths and the LICENSE / COMMERCIAL-LICENSE.md files live at the
# repo root, not inside backend/. Setuptools auto-detects LICENSE in
# the project directory if present; for distribution metadata the SPDX
# identifier above is the canonical statement.
license = "AGPL-3.0-only"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "websockets>=12.0",
    "python-multipart>=0.0.27",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "Pillow>=10.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "gymnasium>=0.29.0",
    "safetensors>=0.4.0",
    "datasets>=2.14",
    "kagglehub>=0.3",
    # kagglehub's handle.py imports `get_web_endpoint` from kagglesdk, but
    # kagglesdk 0.1.24 (2026-05-26) renamed it to `get_endpoint`, so newer
    # kagglesdk breaks `import kagglehub` outright. CI and dev.py install via
    # `uv pip install` which ignores uv.lock, so the cap must live in the
    # dependency spec itself. Remove once kagglehub ships a release that uses
    # the new name.
    "kagglesdk<0.1.24",
    "tiktoken>=0.7.0",
    "tokenizers>=0.15.0",
    "huggingface_hub>=0.20.0",
    "scikit-learn>=1.3.0",
    "platformdirs>=4.0.0",
    # Cross-platform system metrics for `cdui status` (CPU / memory / disk /
    # process table). dev.py falls back to a stdlib-only view when it's absent.
    "psutil>=5.9.0",
    # LLM provider proxy (/api/llm/*) upstream HTTP + SSE streaming. Also in
    # the dev extra for tests; listed here because the proxy is runtime code.
    "httpx>=0.27.0",
    # tomllib is stdlib on 3.11+; pull the backport for the 3.10 floor so
    # `routes_plugins.py` and `scripts/plugins.py` import cleanly.
    'tomli>=2.0.0; python_version < "3.11"',
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "httpx-ws>=0.6.0",
]
llm-sentence = [
    "sentence-transformers>=2.7.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
